# ExecutorRuntime

./: CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.console/: log.md
.custodian/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/executor_runtime/: __init__.py  errors.py  runtime.py
src/executor_runtime/contracts/: __init__.py  invocation.py  result.py  status.py
src/executor_runtime/io/: __init__.py  json_io.py  paths.py
src/executor_runtime/runners/: __init__.py  async_http_runner.py  base.py  http_runner.py  manual_runner.py  subprocess_runner.py
tests/: test_dispatch.py  test_runtime.py
tests/contracts/: test_invocation_contract.py  test_result_contract.py
tests/runners/: test_async_http_runner.py  test_http_runner.py  test_manual_runner.py  test_subprocess_runner.py
