[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "executor-runtime"
version = "0.1.0"
description = "Runtime execution layer for normalized RxP invocations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "rxp @ git+https://github.com/Velascat/RxP.git",
]

[project.optional-dependencies]
http = [
  "httpx>=0.27",
]
dev = [
  "pytest>=8.0",
  "pytest-httpx>=0.30",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
